--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "o2system/framework": "*"
+        "o2system/framework": "*",
+        "phpoffice/phpexcel": "^1.8"
     },
     "autoload": {
         "psr-4": {
