--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "o2system/framework": "*",
-        "phpoffice/phpexcel": "^1.8"
+        "o2system/framework": "*"
     },
     "autoload": {
         "psr-4": {
