change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "o2system/webrestful",
+    "name": "o2system/hydro",
     "description": "O2System Framework Web-Restful Application Boilerplate.",
     "keywords": ["framework", "o2system"],
     "license": "MIT",
