--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "~7.2.0",
-        "o2system/reactor": "^1.0"
+        "php": "^7.2.0",
+        "o2system/reactor": "*"
     },
     "autoload": {
         "psr-4": {
