--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "php": "^7.2.0",
         "o2system/reactor": "*"
     },
+    "require-dev": {
+        "o2system/gear": "*"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
