--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2.0",
-        "o2system/reactor": "*"
+        "o2system/framework": "^5.7"
     },
     "require-dev": {
         "o2system/gear": "*"
